fix about content height on mobile

--- a/_sass/layout/_home.scss
+++ b/_sass/layout/_home.scss
@@ -1,6 +1,7 @@
 .home-container {
   display: flex;
-  height: 100%;
+  height: auto;
+  min-height: 100%;
   width: 100%;
 
   @include media-breakpoint-down(md) {
@@ -76,6 +77,7 @@
   border-bottom: 3px solid $main-color-3;
   justify-content: center;
   text-align: center;
+  position: relative;
   p {
     margin: 0 map-get($spacers, 3);
     color: $background-color;
